macro_utilities/stringify_attr/src/tests/derive/raw_no_attrs.stderr
error: Expected an outer attribute in a list format
  --> $DIR/raw_no_attrs.rs:20:11
   |
20 |         #[stringify_raw]
   |           ^^^^^^^^^^^^^
